# chat_server_v2

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  PROGRESS.md  PROJECT_STRUCTURE.md  README.md  SPEC.md  docker-compose.yml  schema.sql
.cargo/: audit.toml
.claude/: settings.local.json
.claude/agents/: api-design-specialist.md  postgres-architect.md  rust-backend-architect.md  rust-code-reviewer.md
crates/chat-api/: Cargo.toml
crates/chat-api/src/: lib.rs  main.rs
crates/chat-api/src/extractors/: auth.rs  mod.rs  pagination.rs  path.rs  validated.rs
crates/chat-api/src/handlers/: auth.rs  channels.rs  guilds.rs  health.rs  invites.rs  members.rs  messages.rs  mod.rs  reactions.rs  roles.rs  users.rs
crates/chat-api/src/middleware/: mod.rs
crates/chat-api/src/response/: mod.rs
crates/chat-api/src/routes/: mod.rs
crates/chat-api/src/server/: mod.rs
crates/chat-api/src/state/: mod.rs
crates/chat-cache/: Cargo.toml
crates/chat-cache/src/: lib.rs
crates/chat-cache/src/pool/: mod.rs  redis_pool.rs
crates/chat-cache/src/presence/: mod.rs  user_presence.rs
crates/chat-cache/src/pubsub/: channels.rs  mod.rs  publisher.rs  subscriber.rs
crates/chat-cache/src/session/: mod.rs  refresh_token.rs  websocket_session.rs
crates/chat-common/: Cargo.toml
crates/chat-common/src/: lib.rs
crates/chat-common/src/auth/: jwt.rs  mod.rs  password.rs
crates/chat-common/src/config/: app_config.rs  mod.rs
crates/chat-common/src/error/: app_error.rs  mod.rs
crates/chat-common/src/telemetry/: mod.rs  tracing_setup.rs
crates/chat-core/: Cargo.toml
crates/chat-core/src/: lib.rs
crates/chat-core/src/entities/: channel.rs  guild.rs  invite.rs  member.rs  message.rs  mod.rs  reaction.rs  role.rs  user.rs
crates/chat-core/src/error/: domain_error.rs  mod.rs
crates/chat-core/src/events/: domain_event.rs  mod.rs
crates/chat-core/src/traits/: mod.rs  repositories.rs
crates/chat-core/src/value_objects/: mod.rs  permissions.rs  snowflake.rs
crates/chat-db/: Cargo.toml
crates/chat-db/src/: lib.rs
crates/chat-db/src/mappers/: channel.rs  guild.rs  invite.rs  member.rs  message.rs  mod.rs  reaction.rs  role.rs  user.rs
crates/chat-db/src/models/: audit_log.rs  ban.rs  channel.rs  guild.rs  invite.rs  member.rs  message.rs  mod.rs  reaction.rs  refresh_token.rs  role.rs  user.rs
crates/chat-db/src/pool/: mod.rs  postgres.rs
crates/chat-db/src/repositories/: attachment.rs  ban.rs  channel.rs  error.rs  guild.rs  invite.rs  member.rs  message.rs  mod.rs  reaction.rs  role.rs  user.rs
crates/chat-db/tests/: integration_tests.rs
crates/chat-gateway/: Cargo.toml
crates/chat-gateway/src/: lib.rs  main.rs
crates/chat-gateway/src/broadcast/: dispatcher.rs  mod.rs
crates/chat-gateway/src/connection/: connection.rs  manager.rs  mod.rs  session.rs
crates/chat-gateway/src/events/: event_types.rs  mod.rs  payloads.rs
crates/chat-gateway/src/handlers/: error.rs  heartbeat.rs  identify.rs  mod.rs  presence.rs  resume.rs
crates/chat-gateway/src/protocol/: close_codes.rs  messages.rs  mod.rs  opcodes.rs  payloads.rs
crates/chat-gateway/src/server/: handler.rs  mod.rs  state.rs
crates/chat-service/: Cargo.toml
crates/chat-service/src/: lib.rs
crates/chat-service/src/dto/: mappers.rs  mod.rs  requests.rs  responses.rs
crates/chat-service/src/services/: auth.rs  channel.rs  context.rs  dm.rs  error.rs  guild.rs  invite.rs  member.rs  message.rs  mod.rs  permission.rs  presence.rs  reaction.rs  role.rs  user.rs
docs/: ARCHITECTURE.md  DATABASE_DESIGN.md  DATA_MODELS.md  api.yaml  websocket.md
tests/integration/: Cargo.toml
tests/integration/src/: fixtures.rs  helpers.rs  lib.rs
tests/integration/tests/: api_tests.rs
