[workspace]
resolver = "2"
members = [
    "crates/chat-core",
    "crates/chat-common",
    "crates/chat-db",
    "crates/chat-cache",
    "crates/chat-service",
    "crates/chat-api",
    "crates/chat-gateway",
    "tests/integration",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["seung"]
license = "MIT"
rust-version = "1.82"

[workspace.dependencies]
# Internal crates
chat-core = { path = "crates/chat-core" }
chat-common = { path = "crates/chat-common" }
chat-db = { path = "crates/chat-db" }
chat-cache = { path = "crates/chat-cache" }
chat-service = { path = "crates/chat-service" }
chat-api = { path = "crates/chat-api" }
chat-gateway = { path = "crates/chat-gateway" }

# Async runtime
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
futures-util = "0.3"

# Web framework
axum = { version = "0.7", features = ["macros", "ws"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = { version = "0.5", features = ["timeout", "limit"] }
tower-http = { version = "0.6", features = ["cors", "trace", "request-id", "compression-gzip", "timeout"] }
tokio-tungstenite = "0.24"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "json", "migrate"] }

# Redis
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
deadpool-redis = "0.18"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Validation
validator = { version = "0.18", features = ["derive"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Security
jsonwebtoken = "9.3"
argon2 = "0.5"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.10", features = ["v4", "serde"] }

# Configuration
config = "0.14"
dotenvy = "0.15"

# Concurrency
dashmap = "6.1"
parking_lot = "0.12"

# Utilities
bitflags = "2.6"
rand = "0.8"
base64 = "0.22"

# OpenAPI
utoipa = { version = "5", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "8", features = ["axum"] }

# Testing
reqwest = { version = "0.12", features = ["json"] }
tokio-tungstenite-wasm = "0.4"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
panic = "abort"
