[package]
name = "chat-cache"
description = "Cache layer - Redis session, presence, and pub/sub"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
chat-core = { workspace = true }
chat-common = { workspace = true }

# Redis
redis = { workspace = true }
deadpool-redis = { workspace = true }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }
futures-util = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Time
chrono = { workspace = true }

# Tracing
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
