[package]
name = "chat-common"
description = "Shared utilities - config, errors, auth, telemetry"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
chat-core = { workspace = true }

# Configuration
config = { workspace = true }
dotenvy = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Security
jsonwebtoken = { workspace = true }
argon2 = { workspace = true }
rand = { workspace = true }

# Observability
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Time
chrono = { workspace = true }

# Async
tokio = { workspace = true }
