[package]
name = "chat-db"
description = "Database layer - PostgreSQL repositories and models"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
chat-core = { workspace = true }
chat-common = { workspace = true }

# Database
sqlx = { workspace = true }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Time
chrono = { workspace = true }

# Tracing
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
