[package]
name = "chat-gateway"
description = "WebSocket gateway for real-time events"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[[bin]]
name = "chat-gateway"
path = "src/main.rs"

[dependencies]
chat-core = { workspace = true }
chat-common = { workspace = true }
chat-service = { workspace = true }
chat-cache = { workspace = true }

# Web framework with WebSocket
axum = { workspace = true }
tokio-tungstenite = { workspace = true }
tower-http = { workspace = true }

# Async runtime
tokio = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Concurrency
dashmap = { workspace = true }
parking_lot = { workspace = true }

# Tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Configuration
dotenvy = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
