[package]
name = "chat-service"
description = "Application layer - business logic and use cases"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
chat-core = { workspace = true }
chat-common = { workspace = true }
chat-db = { workspace = true }
chat-cache = { workspace = true }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Validation
validator = { workspace = true }

# Tracing
tracing = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Time
chrono = { workspace = true }

# Random (for invite code generation)
rand = { workspace = true }

# Database
sqlx = { workspace = true }

# UUID
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
